# touchtype-kinesis

./: Cargo.toml  PHILOSOPHY.md
src/: app.rs  main.rs  persistence.rs
src/engine/: curriculum.rs  exercise.rs  lesson.rs  mod.rs  progression.rs  typing.rs  words.rs
src/keyboard/: finger.rs  layout.rs  mod.rs
src/ui/: keyboard.rs  menu.rs  mod.rs  progress.rs  results.rs  typing_area.rs
