[package]
name = "kintype"
version = "0.1.0"
edition = "2021"
description = "World-class touch typing tutor for the Kinesis Advantage 360"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
